syntax = "proto3";

package users;

option java_multiple_files = true;
option java_package = "users";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password_hash = 3;
  string name = 4;
  int32 age = 5;
  float weight = 6;
  float height = 7;
}

message CreateUserResponse {
  string id = 1;
}